--- a/kustomize/overlays/production/rollout.yaml
+++ b/kustomize/overlays/production/rollout.yaml
@@ -60,11 +60,26 @@ spec:
       - pause: {duration: 30s}
       analysis:
         templates:
-        - templateName: argo-combined-app
+        - templateName: success-rate
         startingStep: 2
         args:
         - name: service-name
           value: argo-combined-app-canary.production.svc.cluster.local
+
+      #   - templateName: success-rate
+      #   startingStep: 2 # delay starting analysis run until setWeight: 40%
+      #   args:
+      #   - name: service-name
+      #     value: guestbook-svc.default.svc.cluster.local
+      # steps:
+      # - setWeight: 20
+      # - pause: {duration: 10m}
+      # - setWeight: 40
+      # - pause: {duration: 10m}
+      # - setWeight: 60
+      # - pause: {duration: 10m}
+      # - setWeight: 80
+      # - pause: {duration: 10m}
 
 ---
 
