--- a/kustomize/overlays/production/rollout.yaml
+++ b/kustomize/overlays/production/rollout.yaml
@@ -62,9 +62,9 @@ spec:
         templates:
         - templateName: argo-combined-app
         startingStep: 2
-        args:
-        - name: service-name
-          value: "argo-combined-app-canary.production.svc.cluster.local"
+        # args:
+        # - name: service-name
+        #   value: "argo-combined-app-canary.production.svc.cluster.local"
 
 ---
 
@@ -73,50 +73,50 @@ kind: AnalysisTemplate
 metadata:
   name: argo-combined-app
 spec:
-  args:
-  - name: service-name
-  metrics: {}
-  # - name: success-rate
-  #   interval: 10s
-  #   successCondition: result[0] >= 0.8
-  #   failureCondition: result[0] < 0.8
-  #   failureLimit: 3
-  #   provider:
-  #     prometheus:
-  #       address: http://prometheus-server.monitoring
-  #       query: |
-  #         sum(irate(
-  #           istio_requests_total{  
-  #             reporter="source",
-  #             destination_service=~"{{args.service-name}}",
-  #             response_code=~"2.*"
-  #           }[2m]
-  #         )) / sum(irate(
-  #           istio_requests_total{
-  #             reporter="source",
-  #             destination_service=~"{{args.service-name}}"
-  #           }[2m]
-  #         ))
-  # - name: avg-req-duration
-  #   interval: 10s
-  #   successCondition: result[0] <= 1000
-  #   failureCondition: result[0] > 1000
-  #   failureLimit: 3
-  #   provider:
-  #     prometheus:
-  #       address: http://prometheus-server.monitoring
-  #       query: |
-  #         sum(irate(
-  #           istio_request_duration_milliseconds_sum{
-  #             reporter="source",
-  #             destination_service=~"{{args.service-name}}"
-  #           }[2m]
-  #         )) / sum(irate(
-  #           istio_request_duration_milliseconds_count{
-  #             reporter="source",
-  #             destination_service=~"{{args.service-name}}"
-  #           }[2m]
-  #         ))
+  # args:
+  # - name: service-name
+  metrics:
+  - name: success-rate
+    interval: 10s
+    successCondition: result[0] >= 0.8
+    failureCondition: result[0] < 0.8
+    failureLimit: 3
+    provider:
+      prometheus:
+        address: http://prometheus-server.monitoring
+        query: |
+          sum(irate(
+            istio_requests_total{  
+              reporter="source",
+              destination_service=~"argo-combined-app-canary.production.svc.cluster.local",
+              response_code=~"2.*"
+            }[2m]
+          )) / sum(irate(
+            istio_requests_total{
+              reporter="source",
+              destination_service=~"argo-combined-app-canary.production.svc.cluster.local"
+            }[2m]
+          ))
+  - name: avg-req-duration
+    interval: 10s
+    successCondition: result[0] <= 1000
+    failureCondition: result[0] > 1000
+    failureLimit: 3
+    provider:
+      prometheus:
+        address: http://prometheus-server.monitoring
+        query: |
+          sum(irate(
+            istio_request_duration_milliseconds_sum{
+              reporter="source",
+              destination_service=~"argo-combined-app-canary.production.svc.cluster.local"
+            }[2m]
+          )) / sum(irate(
+            istio_request_duration_milliseconds_count{
+              reporter="source",
+              destination_service=~"argo-combined-app-canary.production.svc.cluster.local"
+            }[2m]
+          ))
       
 ---
 
