--- a/kustomize/base/ingress.yaml
+++ b/kustomize/base/ingress.yaml
@@ -1,21 +1,13 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
 metadata:
   name: argo-combined-app
-  annotations:
-    ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    ingress.kubernetes.io/rewrite-target: /
-    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
-  rules:
-  - http:
-      paths:
-      - path: /
-        pathType: ImplementationSpecific
-        backend:
-          service:
-           name: argo-combined-app
-           port:
-             number: 80
-    host: acme.com
+  entryPoints:
+    - web
+    - websecure
+  routes:
+    - kind: Rule
+      match: Host(`argo-combined-app.local`) || Host(`argo-combined-app.build-00.openticket.tech`)
+      services:
+        - name: argo-compbined-app
