--- a/kustomize/overlays/production/rollout.yaml
+++ b/kustomize/overlays/production/rollout.yaml
@@ -12,11 +12,10 @@ spec:
     metadata:
       labels:
         app: argo-combined-app
-        istio-injection: enabled
     spec:
       containers:
       - name: argo-combined-app
-        image: hub.openticket.tech/gitops/demo-app
+        image: hub.openticket.tech/gitops/argo-combined-app
         ports:
         - containerPort: 80
         livenessProbe:
@@ -65,56 +64,56 @@ spec:
 
 ---
 
-apiVersion: argoproj.io/v1alpha1
-kind: AnalysisTemplate
-metadata:
-  name: argo-combined-app
-spec:
-  # args:
-  # - name: service-name
-  metrics:
-  - name: success-rate
-    interval: 10s
-    successCondition: result[0] >= 0.8
-    failureCondition: result[0] < 0.8
-    failureLimit: 3
-    provider:
-      prometheus:
-        address: http://prometheus-server.monitoring
-        query: |
-          sum(irate(
-            istio_requests_total{  
-              reporter="source",
-              destination_service=~"argo-combined-app-canary.production.svc.cluster.local",
-              response_code=~"2.*"
-            }[2m]
-          )) / sum(irate(
-            istio_requests_total{
-              reporter="source",
-              destination_service=~"argo-combined-app-canary.production.svc.cluster.local"
-            }[2m]
-          ))
-  - name: avg-req-duration
-    interval: 10s
-    successCondition: result[0] <= 1000
-    failureCondition: result[0] > 1000
-    failureLimit: 3
-    provider:
-      prometheus:
-        address: http://prometheus-server.monitoring
-        query: |
-          sum(irate(
-            istio_request_duration_milliseconds_sum{
-              reporter="source",
-              destination_service=~"argo-combined-app-canary.production.svc.cluster.local"
-            }[2m]
-          )) / sum(irate(
-            istio_request_duration_milliseconds_count{
-              reporter="source",
-              destination_service=~"argo-combined-app-canary.production.svc.cluster.local"
-            }[2m]
-          ))
-      
+#apiVersion: argoproj.io/v1alpha1
+#kind: AnalysisTemplate
+#metadata:
+#  name: argo-combined-app
+#spec:
+#  # args:
+#  # - name: service-name
+#  metrics:
+#  - name: success-rate
+#    interval: 10s
+#    successCondition: result[0] >= 0.8
+#    failureCondition: result[0] < 0.8
+#    failureLimit: 3
+#    provider:
+#      prometheus:
+#        address: http://prometheus-server.monitoring
+#        query: |
+#          sum(irate(
+#            istio_requests_total{
+#              reporter="source",
+#              destination_service=~"argo-combined-app-canary.production.svc.cluster.local",
+#              response_code=~"2.*"
+#            }[2m]
+#          )) / sum(irate(
+#            istio_requests_total{
+#              reporter="source",
+#              destination_service=~"argo-combined-app-canary.production.svc.cluster.local"
+#            }[2m]
+#          ))
+#  - name: avg-req-duration
+#    interval: 10s
+#    successCondition: result[0] <= 1000
+#    failureCondition: result[0] > 1000
+#    failureLimit: 3
+#    provider:
+#      prometheus:
+#        address: http://prometheus-server.monitoring
+#        query: |
+#          sum(irate(
+#            istio_request_duration_milliseconds_sum{
+#              reporter="source",
+#              destination_service=~"argo-combined-app-canary.production.svc.cluster.local"
+#            }[2m]
+#          )) / sum(irate(
+#            istio_request_duration_milliseconds_count{
+#              reporter="source",
+#              destination_service=~"argo-combined-app-canary.production.svc.cluster.local"
+#            }[2m]
+#          ))
+#
 ---
 
 apiVersion: v1
