--- a/kustomize/overlays/production/rollout.yaml
+++ b/kustomize/overlays/production/rollout.yaml
@@ -13,6 +13,8 @@ spec:
       labels:
         app: argo-combined-app
     spec:
+      imagePullSecrets:
+        - name: harbor-gitops
       containers:
       - name: argo-combined-app
         image: hub.openticket.tech/gitops/argo-combined-app
