--- a/config.toml
+++ b/config.toml
@@ -45,8 +45,8 @@ disqusShortname = ""
   [params.banner]
     # To change the background image on the homepage banner, replace 'banner.jpg' in
     # the 'static/img' folder.
-    title = "The DevOps Toolkit Series"
-    subtitle = "Test 8"
+    title = "The Argo Rollouts Test App"
+    subtitle = "Test 9"
     buttonText = "Get Started"
 
 
