--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,7 @@ disqusShortname = ""
 
   # Navigation Section
   [params.navigation]
-    title = "The DevOps Toolkit Series"
+    title = "The Argo Rollouts Test"
     subtitle = "By Viktor Farcic"
     menu = "Menu"
     # Optional logo as brand stored in img/
