--- a/config.toml
+++ b/config.toml
@@ -46,7 +46,7 @@ disqusShortname = ""
     # To change the background image on the homepage banner, replace 'banner.jpg' in
     # the 'static/img' folder.
     title = "The Argo Rollouts Test App"
-    subtitle = "Test pff"
+    subtitle = "Test 123"
     buttonText = "Get Started"
 
 
